# OpenVINO-Test

./: .gitignore  CMakeLists.txt  OpenVinoRunner.h  main.cpp
